--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "hbs": "^4.0.4",
-        "markdown": "^0.5.0"
+        "hbs": "^4.0.6"
     },
     "devDependencies": {
         "nodemon": "^1.19.1"
