--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.4",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "hbs": "^4.0.6"
+        "hbs": "^4.0.6",
+        "jsonwebtoken": "^8.5.1"
     },
     "devDependencies": {
         "nodemon": "^1.19.1"
