--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "scripts": {
         "start": "node src/app.js",
-        "dev": "nodemon src/app.js",
+        "dev": "nodemon -r dotenv/config src/app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
@@ -20,7 +20,8 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "hbs": "^4.0.6",
-        "jsonwebtoken": "^8.5.1"
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.8.5"
     },
     "devDependencies": {
         "nodemon": "^1.19.1"
