--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "express": "^4.17.1",
         "hbs": "^4.0.6",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.8.5"
+        "mongoose": "^5.8.5",
+        "multer": "^1.4.2"
     },
     "devDependencies": {
         "nodemon": "^1.19.1"
