--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,9 @@ typings/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# events pdf
+public/files/events/
+
+# events photos
+public/img/events/
