--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.21.1",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.4",
         "dotenv": "^8.2.0",
